--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
 
-<p>If you're using the GitHub for Mac／宗琦, simply sync your repository and you'll see the new branch.</p>
+<p>If you're using the GitHub for Mac宗琦, simply sync your repository and you'll see the new branch.</p>
 
 <h3>Designer Templates</h3>
 
